# knn_classimbalance

./: .gitignore  .~Fase1_KNN_ClassImbalance.pptx  Fase1_KNN_ClassImbalance.pptx  Makefile  README.md  TODO.md  animation.py  conftest.py  environment.yml  fix_cell23.py  k_nearest_neighbors_from_scratch.ipynb  pyproject.toml
class_imbalance/__MACOSX/: ._class_imbalance
class_imbalance/class_imbalance/: dataset_1000_hypothyroid.csv  dataset_1002_ipums_la_98-small.csv  dataset_1004_synthetic_control.csv  dataset_1014_analcatdata_dmft.csv  dataset_1016_vowel.csv  dataset_1018_ipums_la_99-small.csv  dataset_1020_mfeat-karhunen.csv  dataset_1021_page-blocks.csv  dataset_1022_mfeat-pixel.csv  dataset_1023_soybean.csv  dataset_1045_kc1-top5.csv  dataset_1049_pc4.csv  dataset_1050_pc3.csv  dataset_1056_mc1.csv  dataset_1059_ar1.csv  dataset_1061_ar4.csv  dataset_1064_ar6.csv  dataset_1065_kc3.csv  dataset_311_oil_spill.csv  dataset_316_yeast_ml8.csv  dataset_38_sick.csv  dataset_450_analcatdata_lawsuit.csv  dataset_463_backache.csv  (+25 more)
config/: settings.yaml
docs/: knn_fair_rank_joint_cv_demo.html
notebooks/: algorithm_design.ipynb  algorithm_documentation.ipynb  algorithm_reference.ipynb  analysis.ipynb  entrega_explicada.ipynb  entrega_final 2.ipynb  entrega_final.ipynb  exploration.ipynb  meta_analysis.ipynb  phase1_baseline.ipynb  phase2_benchmark.ipynb  report.ipynb
presentation/: build_pptx.py  entrega_final.pptx
tests/: test_benchmarking.py  test_dann.py  test_knn_adaptive.py  test_knn_base.py  test_knn_topo.py  test_metrics.py  test_preprocessing.py
(+316 files in other folders)
